--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,39 @@
-header{
-    position: relative;
-   
+.header {
+    position: fixed;
 }
-
-
-
 img{
-    width: 5%;
-    height:2%;
+    width: 100%;
+    height:50%;
+    outline: 1px solid red;
 }
 figure{
-    width: 250%;
-    height:60%;
-    
+    width: 10%;
+    display:inline-block;
+    margin: 0%;
+    border: 0%;
+    outline:1px solid green;
+}
+li{
+    /* outline: 1px solid red; */
+    width: 100px;
+    display: inline-block;
+    text-align: center;
+}
+ul{
+    /* outline: 1px solid blue; */
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    background: #2e2e2a;
+    line-height: 250%;
+}
+a{
+    /* outline: 1px solid green; */
+    text-decoration: none;
+    display: block;
+    color:#fff;
+}
+a:hover {
+    background: #f9a91a;
+    color:#000;
 }
