--- a/src/style.css
+++ b/src/style.css
@@ -49,6 +49,7 @@ a {
   border-right-style: solid;
   border-color: #fff;
   cursor: pointer;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  
 }
 .sidebar-nav ul li a {
